# udf-in-memory

./: Cargo.toml  LICENSE  README.md  design_doc.md
src/: main.rs  test_data.rs
