[package]
name = "udf"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored", "serialize"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3